--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>HTML 2019 PAUL</title>
 </head>
 <body>
-
+<h1>HTML 2019</h1>
+<h2>PAUL VAN BREDA</h2>
 </body>
 </html>
