--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <h1>HTML 2019</h1>
 <h2>PAUL VAN BREDA</h2>
-<a href="h01/index.html">HOOFDSTUK1</a>
+<a> href="h01/index.html">HOOFDSTUK1</a>
+<p> href="h02/index.html">HOOFDSTUK2</p>
 </body>
 </html>
