--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <h2>PAUL VAN BREDA</h2>
 <a> href="h01/index.html">HOOFDSTUK1</a>
 <p> href="h02/index.html">HOOFDSTUK2</p>
+<p> href="h03/index.html">HOOFDSTUK3</p>
 </body>
 </html>
