--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <a> href="h01/index.html">HOOFDSTUK1</a>
 <p> href="h02/index.html">HOOFDSTUK2</p>
 <p> href="h03/index.html">HOOFDSTUK3</p>
+<p> href="h04/index.html">HOOFDSTUK4</p>
 </body>
 </html>
