--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <p> href="h02/index.html">HOOFDSTUK2</p>
 <p> href="h03/index.html">HOOFDSTUK3</p>
 <p> href="h04/index.html">HOOFDSTUK4</p>
+<p> href="h05/index1.html">HOOFDSTUK5</p>
 </body>
 </html>
