--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <p> href="h03/index.html">HOOFDSTUK3</p>
 <p> href="h04/index.html">HOOFDSTUK4</p>
 <p> href="h05/index1.html">HOOFDSTUK5</p>
+<p> href="h06/index1.html">HOOFDSTUK6</p>
 </body>
 </html>
