alles behalve h08 klaar

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <p> href="h04/index.html">HOOFDSTUK4</p>
 <p> href="h05/index1.html">HOOFDSTUK5</p>
 <p> href="h06/index1.html">HOOFDSTUK6</p>
+<p> href="h07/index1.html">HOOFDSTUK7</p>
 </body>
 </html>
