--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 <body>
 <h1>HTML 2019</h1>
 <h2>PAUL VAN BREDA</h2>
-<a> href="h01/index.html">HOOFDSTUK1</a>
-<p> href="h02/index.html">HOOFDSTUK2</p>
-<p> href="h03/index.html">HOOFDSTUK3</p>
-<p> href="h04/index.html">HOOFDSTUK4</p>
-<p> href="h05/index1.html">HOOFDSTUK5</p>
-<p> href="h06/index1.html">HOOFDSTUK6</p>
-<p> href="h07/index1.html">HOOFDSTUK7</p>
+<a href="h01/index.html">HOOFDSTUK1</a>
+<a href="h02/index.html">HOOFDSTUK2</a>
+<a href="h03/index.html">HOOFDSTUK3</a>
+<a href="h04/index.html">HOOFDSTUK4</a>
+<a href="h05/index.html">HOOFDSTUK5</a>
+<a href="h06/index.html">HOOFDSTUK6</a>
+<a href="h07/index.html">HOOFDSTUK7</a>
+
 </body>
 </html>
