alles behalve h08 klaar

--- a/h04/index.html
+++ b/h04/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Wilkens elektrische instalaties</title>
 </head>
-<link rel="stylesheet" type="text/css" href="index 2.css">
+<link rel="stylesheet" type="text/css" href="index%202.css">
 <div>
     <div class="wrapper"></div>
     <header>
