--- a/h07/index 1.html
+++ b/h07/index 1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="index 2.css">
+    <link rel="stylesheet" href="index%202.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700|Ubuntu&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>True Music Instruments</title>
