alles behalve h08 klaar

--- a/h02/index.html
+++ b/h02/index.html
@@ -20,10 +20,10 @@
 
 <h1>zonnebrand</h1>
 
-<img src="zonebrand 1.jpg" alt="Nivea zonnebrand" style="width:250px;height:250px;border:0">
+<img src="sun-screen-4646527_640.png" alt="Nivea zonnebrand" style="width:250px;height:250px;border:0">
 
 
-<img src="zonebrand 2.jpg" alt="verbrande man die op zijn rug heeft geschreven dat zonebrand voor mietjes is"
+<img src="wat_moet_je_doen_als_je_verbrand_bent.jpg" alt="verbrande man die op zijn rug heeft geschreven dat zonebrand voor mietjes is"
      style="width:250px;height:250px;border:0">
 
 
