--- a/h05/index 1.html
+++ b/h05/index 1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="index%202.css">
     <meta charset="UTF-8">
     <title>Burton Education</title>
 </head>
@@ -15,8 +16,11 @@
         <a href="">Contact</a>
     </nav>
     <section class="appel">
-        <img src="appel.jpg" alt="visual appel">
+        <img src="img/appel.jpg" alt="visual appel">
     </section>
+    <img src="img/bus.jpg" alt="schoolbus">
+    <img src="img/desk.jpg" alt="klok">
+    <img src="img/pythagoras.jpg" alt="schoolbord">
     <section class="artiklelen">
         <h1>Donec eleifend egent sem vitae mattis</h1>
         <article>Nunc sit amet dapibus neque. Mauris congue commodo lacus, commodo lobortis lectus commodo vel. Nam eget
@@ -47,9 +51,7 @@
         </article>
     </section>
     <section class="visuals">
-        <img src="bus.jpg" alt="schoolbus">
-        <img src="desk.jpg" alt="klok">
-        <img src="pythagoras.jpg" alt="schoolbord">
+
     </section>
 </div>
 <footer>
