--- a/h04/index.html
+++ b/h04/index.html
@@ -8,7 +8,7 @@
 <div>
     <div class="wrapper"></div>
     <header>
-
+<img src="img/wilkens_logo.png" alt="logo wilkens elektiriche instalaties">
         <nav>
             <a href="">Nieuws</a>
             <a href="">Over ons</a>
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <main>
-        <img src="img/wilkens_logo.png" alt="foto electrische instalaties">
+        <img src="img/elektriciteit.jpg" alt="foto electrische instalaties">
         <article>
             Nunc sit amet dapibus neque. Mauris congue commodo lacus, commodo lobortis lectus commodo vel. Nam eget
             tristique mauris, eget lobortis diam. Donec rhoncus, ex quis semper tincidunt, erat massa suscipit orci,
