--- a/h01/index.html
+++ b/h01/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <h1>photo's Paul.</h1>
-<img src="hawaii-181082_1920.jpg" alt="golven">
-<img src="monkey-428032_1280.jpg" alt="aap">
-<img src="nau-370-1615930_1920.jpg" alt="zeilen">
-<img src="pug-801826_1920" alt="hond">
+<img src="img/hawaii-181082_1920.jpg" alt="golven">
+<img src="img/monkey-428032_1280.jpg" alt="aap">
+<img src="img/nau-370-1615930_1920.jpg" alt="zeilen">
+<img src="img/pug-801826_1920.jpg" alt="hond">
 <br><br>
 </body>
 </html>
