alles behalve h08 klaar

--- a/h06/index.html
+++ b/h06/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="index%202.css">
     <meta charset="UTF-8">
     <title>Burton Education</title>
 </head>
